# fastest-note-app

./: .gitignore  README.md
backend/: .clippy.toml  .env.example  .gitignore  Cargo.toml  Makefile  build.rs  rustfmt.toml
backend/api-spec/: index.html  openapi.yaml
backend/api-spec/docs/api/: index.html
backend/migrations/: 001_initial_schema.sql  002_performance_indexes.sql
backend/src/: app_state.rs  database.rs  health.rs  lib.rs  main.rs  redis.rs  router.rs  shutdown.rs
backend/src/cache/: redis_cache.rs
backend/src/database/: optimizations.sql
backend/src/handlers/: auth.rs  folder.rs  note.rs  websocket.rs
backend/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs
backend/src/models/: folder.rs  mod.rs  note.rs  user.rs
backend/src/repositories/: folder.rs  note.rs  user.rs
backend/src/services/: auth.rs  folder.rs  mod.rs  note.rs  websocket.rs
backend/tests/contract/: test_auth_login.rs  test_auth_refresh.rs  test_auth_register.rs  test_folders_create.rs  test_folders_delete.rs  test_folders_list.rs  test_folders_update.rs  test_notes_create.rs  test_notes_delete.rs  test_notes_list.rs  test_notes_move.rs  test_notes_update.rs  test_websocket_folders.rs  test_websocket_lifecycle.rs  test_websocket_notes.rs
backend/tests/integration/: quickstart_validation.rs  test_concurrent_user_scenarios.rs  test_data_consistency_scenarios.rs  test_edge_case_scenarios.rs  test_error_recovery_scenarios.rs  test_performance_scenarios.rs  test_quickstart_scenario_1.rs  test_quickstart_scenario_2.rs  test_quickstart_scenario_3.rs
backend/tests/performance/: api_benchmarks.rs
backend/tests/unit/: test_validation.rs
docs/api/: README.md  examples.md  index.html  performance.md
frontend/: .eslintrc.json  .gitignore  next.config.ts  package-lock.json  package.json  prettier.config.js
frontend/src/components/Auth/: AuthContainer.tsx  LoginForm.stories.tsx  LoginForm.tsx  RegisterForm.tsx
frontend/src/components/Editor/: NoteEditor.stories.tsx  NoteEditor.tsx
frontend/src/components/Navigation/: FolderTree.stories.tsx  FolderTree.tsx
frontend/src/components/Notes/: NoteList.stories.tsx  NoteList.tsx
frontend/src/components/Sync/: ConflictResolver.stories.tsx  ConflictResolver.tsx
frontend/src/services/: api.ts  offline.ts  syncQueue.ts  websocket.ts
frontend/src/stores/: authStore.ts  contentStore.ts
frontend/src/stories/: Introduction.stories.js
frontend/src/types/: auth.ts  folder.ts  note.ts  websocket.ts
frontend/src/utils/: dynamic-imports.ts  fallback-components.tsx  performance.ts
frontend/tests/: jest.polyfills.js  setup.ts
frontend/tests/e2e/: auth.spec.ts  global-setup.ts  global-teardown.ts  note-editor.spec.ts  playwright.config.ts  quickstart-validation.spec.ts
frontend/tests/unit/: auth.test.tsx  editor.test.tsx  jest.config.js  stores.test.ts
scripts/: generate-docs.sh  validate-quickstart.sh
specs/001-web-notion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-web-notion/contracts/: api-spec.yaml  websocket-spec.md
