[package]
name = "fastest-note-app-backend"
version = "1.0.0"
edition = "2021"
description = "High-performance note-taking application backend built with Rust"
authors = ["Fastest Note App Team"]
license = "MIT"
repository = "https://github.com/fastest-note-app/backend"
keywords = ["api", "notes", "real-time", "websocket", "performance"]
categories = ["web-programming::http-server"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "timeout"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
deadpool-postgres = "0.12"

# Redis caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"

# Authentication & Security  
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment variables
dotenvy = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"

# URL parsing
url = "2.5"

# System information
gethostname = "0.4"

# HTTP client (for testing)
reqwest = { version = "0.11", features = ["json"] }

# API Documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }
rustc_version = "0.4"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.8"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres", "redis"] }

# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "server"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
